--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -16,6 +16,7 @@
             height: 1240px;
             width: 400px;
             -webkit-mask-image: url(https://assets.codehub.cn/static/media/Icon-Github.5d7f137f.png);
+            mask-image: url(https://assets.codehub.cn/static/media/Icon-Github.5d7f137f.png);
         }
     </style>
 </head>
